--- a/index.html
+++ b/index.html
@@ -1,40 +1,63 @@
 <!DOCTYPE html>
-<html> 
+<html>
 
-    <head>
-        <title>Browser MQTT Client</title>
-    </head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <body>
-      <h2>MQTT Conf</h2>
-      Brocker : 
-      <input name="brocker" id="brocker">
-      Port : 
-      <input name="port" id="port">
-      Client ID : 
-      <input name="clientId" id="clientId">
-      <button class = 'button-en' id = 'conf_btn'>Submit</button>
-      <br><br>
-      <div id="conf_debug"></div>
-      <br><br><br>
+<head>
+    <title>Browser MQTT Client</title>
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" <link rel="apple-touch-icon" sizes="57x57" href="images/icon/apple-icon-57x57.png"> -->
+    <link rel="stylesheet" href="style.css">
+</head>
 
-      <h2>MQTT Publish</h2>
-      Topic : 
-      <input id="pub_topic">
-      Message : 
-      <input id="msg">
-      <button class = 'button-en' id = 'pub_btn'>Publish</button>
-      <div id="pub_debug"></div>
-      <br><br><br>
+<body>
+    <div class="left_nav">
+        <div class="titl_div">
+            <h2 class="title">Browser MQTT<br> Client</h2>
+            <a href="github.com">github</a>
+        </div>
+        <div class="con_status">
+            <p>debug msg here</p>
+        </div>
+    </div>
+    <div class="conf_div">
+        <h2>MQTT Conf</h2>
+        <p>Brocker :</p> <input name="brocker" id="brocker">
+        <p>Port :</p> <input name="port" id="port">
+        <p>Client ID :</p> <input name="clientId" id="clientId"><br><br>
+        <p>User name :</p> <input name="user Name" id="userName">
+        <p>Password :</p> <input name="password" id="password">
+        <p>Keepalive :</p> <input name="keeoalive" id="keepalive">
+        <label for="qos">QOS :</label>
+        <select name="qos" id="qos">
+            <option value="0">0 -Almost Once</option>
+            <option value="1">1 -Atleast Once</option>
+            <option value="2">2 -Exactly Once</option>
+          </select>
 
-      <h2>MQTT Subscribe</h2>
-      Topic : 
-      <input id="sub_topic">
-      <button class = 'button-en' id = 'sub_btn'>Subscribe</button>
-      <br><br>
-      <div id="sub_debug"></div>
+        <button class='btn-primary' id='conf_btn'>Submit</button>
+        <div id="conf_debug"></div>
+    </div>
+    <div class="pub_sub_div">
+        <div class="pub_div">
+            <h2>MQTT Publish</h2>
+            <p>Topic :</p><input id="pub_topic">
+            <p>Message :</p><input id="msg"><br><br>
+            <button class='btn-primary' id='pub_btn'>Publish</button>
+            <div id="pub_debug">
+                <p>Pub debug msg here</p>
+            </div>
+        </div>
 
-    </body>
-    <script src="scripts/mqtt.js"></script>
-    <script src="scripts/main.js"></script>
+        <div class="sub_div">
+            <h2>MQTT Subscribe</h2>
+            <p>Topic : </p>
+            <input id="sub_topic"><br><br>
+            <button class='btn-primary' id='sub_btn'>Subscribe</button>
+            <div id="sub_debug">
+                <p>sub debug msg here</p>
+            </div>
+        </div>
+    </div>div>
+</body>
+<script src="scripts/mqtt.js"></script>
+<script src="scripts/main.js"></script>
+
 </html>
