--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="main_div">
+    <main>
         <div class="left_nav">
             <div class="titl_div">
                 <h1 class="title">Browser MQTT<br> Client</h1>
@@ -34,102 +34,91 @@
                 <hr><br>
             </div>
         </div>
-        <div class="right_div">
-            <div class="conf_div_main">
-                <div class="conf_div">
-                    <div class="left">
-                        <div class="input_div">
-                            <label for="brocker" class="label_name">
-                                <span class="content_name"> Brocker :</span>
-                            </label>
-                            <input name="brocker" id="brocker" required>
-                        </div>
-                        <div class="input_div">
-                            <label for="port" class="label_name">
-                                <span class="content_name"> Port :</span>
-                            </label>
-                            <input name="port" id="port">
-                        </div>
-                        <div class="input_div">
-                            <label for="clientId" class="label_name">
-                                <span class="content_name"> Client ID :</span>
-                            </label>
-                            <input name="clientId" id="clientId"><br><br>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="input_div">
-                            <label for="userName class=" label_name ">
-                                <span class="content_name "> User name :</span>
-                            </label>
-                            <input name="userName " id="userName ">
-                        </div>
-                        <div class="input_div ">
-                            <label for="password " class="label_name ">
-                                <span class="content_name "> Password :</span>
-                            </label>
-                            <input name="password " id="password ">
-                        </div>
-                        <div class="input_div ">
-                            <label for="keepalive " class="label_name ">
-                                <span class="content_name "> Keepalive :</span>
-                            </label>
-                            <input name="keepalive " id="keepalive ">
-                        </div>
-                    </div>
-                    <div class="input_div ">
-                        <label for="qos " class="label_name ">
-                            <span class="content_name "> QOS :</span>
-                        </label>
-                        <select class="select " name="qos " id="qos ">
-                            <option value="0 ">0 -Almost Once</option>
-                            <option value="1 ">1 -Atleast Once</option>
-                            <option value="2 ">2 -Exactly Once</option>
-                        </select>
-                    </div>
-                    <button class='btn-primary' id='conf_btn'>Submit</button>
-                    <div id="conf_debug ">
-                        Conected
-                    </div>
-                </div>
+        <div class="conf_div">
+            <div class="input_div">
+                <label for="brocker" class="label_name">
+                    <span class="content_name"> Brocker :</span>
+                </label>
+                <input name="brocker" id="brocker" placeholder="Brocker" required>
             </div>
-            <div class="pub_sub_div ">
-                <div class="pub_div ">
-                    <h2>MQTT Publish</h2>
-                    <div class="input_div ">
-                        <label for="pub_topic " class="label_name ">
-                            <span class="content_name "> Topic :</span>
-                        </label>
-                        <input name="pub_topic " id="pub_topic " required>
-                    </div>
-                    <div class="input_div ">
-                        <label for="msg " class="label_name ">
-                            <span class="content_name "> Message :</span>
-                        </label>
-                        <input name="msg " id="msg " required><br><br>
-                    </div>
-                    <button class='btn-primary' id='pub_btn'>Publish</button>
-                    <div id="pub_debug ">
-                        <p>Pub debug msg here</p>
-                    </div>
-                </div>
-
-                <div class="sub_div ">
-                    <h2>MQTT Subscribe</h2>
-                    <div class="input_div ">
-                        <label for="sub_topic " class="label_name ">
-                            <span class="content_name "> Topic :</span>
-                        </label>
-                        <input name="sub_topic " id="sub_topic " required><br><br>
-                    </div>
-                    <button class='btn-primary' id='sub_btn'>Subscribe</button>
-                    <div id="sub_debug ">
-                        <p>sub debug msg here</p>
-                    </div>
-                </div>
+            <div class="input_div">
+                <label for="port" class="label_name">
+                    <span class="content_name"> Port :</span>
+                </label>
+                <input name="port" id="port">
+            </div>
+            <div class="input_div">
+                <label for="clientId" class="label_name">
+                    <span class="content_name"> Client ID :</span>
+                </label>
+                <input name="clientId" id="clientId"><br><br>
+            </div>
+            <div class="input_div">
+                <label for="userName class=" label_name ">
+                    <span class="content_name "> User name :</span>
+                </label>
+                <input name="userName " id="userName ">
+            </div>
+            <div class="input_div ">
+                <label for="password " class="label_name ">
+                    <span class="content_name "> Password :</span>
+                </label>
+                <input name="password " id="password ">
+            </div>
+            <div class="input_div ">
+                <label for="keepalive " class="label_name ">
+                    <span class="content_name "> Keepalive :</span>
+                </label>
+                <input name="keepalive " id="keepalive ">
+            </div>
+            <div class="input_div ">
+                <label for="qos " class="label_name ">
+                    <span class="content_name "> QOS :</span>
+                </label>
+                <select class="select " name="qos " id="qos ">
+                    <option value="0 ">0 -Almost Once</option>
+                    <option value="1 ">1 -Atleast Once</option>
+                    <option value="2 ">2 -Exactly Once</option>
+                </select>
+            </div>
+            <button class='btn-primary' id='conf_btn'>Submit</button>
+            <div id="conf_debug ">
+                Conected
+            </div>
+        </div>   
+        <div class="pub_div ">
+            <h2>MQTT Publish</h2>
+            <div class="input_div ">
+                <label for="pub_topic " class="label_name ">
+                    <span class="content_name "> Topic :</span>
+                </label>
+                <input name="pub_topic " id="pub_topic " required>
+            </div>
+            <div class="input_div ">
+                <label for="msg " class="label_name ">
+                    <span class="content_name "> Message :</span>
+                </label>
+                <input name="msg " id="msg " required><br><br>
+            </div>
+            <button class='btn-primary' id='pub_btn'>Publish</button>
+            <div id="pub_debug ">
+                <p>Pub debug msg here</p>
             </div>
         </div>
-    </div>
+        <div class="sub_div ">
+            <h2>MQTT Subscribe</h2>
+            <div class="input_div ">
+                <label for="sub_topic " class="label_name ">
+                    <span class="content_name "> Topic :</span>
+                </label>
+                <input name="sub_topic " id="sub_topic " required><br><br>
+            </div>
+            <button class='btn-primary' id='sub_btn'>Subscribe</button>
+            <div id="sub_debug ">
+                <p>sub debug msg here</p>
+            </div>
+        </div>
+    </main>
 </body>
 <script src="scripts/mqtt.js "></script>
 <script src="scripts/main.js "></script>
