--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1 class="title">Browser MQTT<br> Client</h1>
                 <a href="https://github.com/Akash97p/Browser_MQTT_Client" target="_blank"><img src="https://image.flaticon.com/icons/png/512/25/25231.png" class="git_img"> </a>
             </div>
-            <div class="debug_window">
+            <div id="debug_window" class="debug_window">
                 <div class="debug_title">
                     <p><b>Debug Messages</b></p>
                 </div>
@@ -35,8 +35,11 @@
             </div>
         </div>
         <div class="status_bar">
-            <div class="con_status">Disconnected</div>
-            <div class="conf_exp"><button class='exp_btn' id='conf_exp'>▼</button>
+            <div class="con_status_div">
+                <p id="con_status" class="con_status"><b>Disconnected</b></p>
+            </div>
+            <div class="conf_exp">
+                <img src="images/drop_btn.png" class="exp_btn" id="conf_exp">
             </div>
         </div>
         <div class="conf_div">
@@ -59,26 +62,26 @@
                 <input name="clientId" id="clientId"><br><br>
             </div>
             <div class="input_div">
-                <label for="userName class=" label_name ">
+                <label for="userName" class=" label_name ">
                     <span class="content_name "> User name :</span>
                 </label>
-                <input name="userName " id="userName ">
+                <input name="userName" id="userName">
             </div>
-            <div class="input_div ">
-                <label for="password " class="label_name ">
+            <div class="input_div">
+                <label for="password" class="label_name">
                     <span class="content_name "> Password :</span>
                 </label>
-                <input name="password " id="password ">
+                <input name="password" id="password">
             </div>
-            <div class="input_div ">
-                <label for="keepalive " class="label_name ">
+            <div class="input_div">
+                <label for="keepalive" class="label_name">
                     <span class="content_name "> Keepalive :</span>
                 </label>
-                <input name="keepalive " id="keepalive ">
+                <input name="keepalive" id="keepalive">
             </div>
-            <div class="input_div ">
-                <label for="qos " class="label_name ">
-                    <span class="content_name "> QOS :</span>
+            <div class="input_div">
+                <label for="qos" class="label_name">
+                    <span class="content_name"> QOS :</span>
                 </label>
                 <select class="select " name="qos " id="qos ">
                     <option value="0 ">0 -Almost Once</option>
@@ -86,40 +89,37 @@
                     <option value="2 ">2 -Exactly Once</option>
                 </select>
             </div>
-            <button class='btn-primary' id='conf_btn'>Submit</button>
-            <div id="conf_debug ">
-                Conected
-            </div>
+            <button class="btn-primary" id="conf_btn" >Submit</button>
         </div>   
-        <div class="pub_div ">
+        <div class="pub_div">
             <h2>MQTT Publish</h2>
-            <div class="input_div ">
-                <label for="pub_topic " class="label_name ">
+            <div class="input_div">
+                <label for="pub_topic" class="label_name">
                     <span class="content_name "> Topic :</span>
                 </label>
-                <input name="pub_topic " id="pub_topic " required>
+                <input name="pub_topic" id="pub_topic" required>
             </div>
-            <div class="input_div ">
-                <label for="msg " class="label_name ">
+            <div class="input_div">
+                <label for="msg" class="label_name">
                     <span class="content_name "> Message :</span>
                 </label>
-                <input name="msg " id="msg " required><br><br>
+                <input name="msg" id="msg" required><br><br>
             </div>
             <button class='btn-primary' id='pub_btn'>Publish</button>
             <div id="pub_debug ">
                 <p>Pub debug msg here</p>
             </div>
         </div>
-        <div class="sub_div ">
+        <div class="sub_div">
             <h2>MQTT Subscribe</h2>
-            <div class="input_div ">
-                <label for="sub_topic " class="label_name ">
-                    <span class="content_name "> Topic :</span>
+            <div class="input_div">
+                <label for="sub_topic" class="label_name">
+                    <span class="content_name"> Topic :</span>
                 </label>
-                <input name="sub_topic " id="sub_topic " required><br><br>
+                <input name="sub_topic" id="sub_topic" required><br><br>
             </div>
-            <button class='btn-primary' id='sub_btn'>Subscribe</button>
-            <div id="sub_debug ">
+            <button class="btn-primary" id='sub_btn'>Subscribe</button>
+            <div id="sub_debug">
                 <p>sub debug msg here</p>
             </div>
         </div>
@@ -127,6 +127,5 @@
 </body>
 <script src="scripts/mqtt.js "></script>
 <script src="scripts/main.js "></script>
-<script src="scripts/main.js "></script>
-
+<!-- <script src="test.js "></script> -->
 </html>
