--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                 <input name="sub_topic" id="sub_topic" required><br><br>
             </div>
             <button class="btn-primary" id='sub_btn'>Subscribe</button>
-            <div id="sub_debug">
-                <p>sub debug msg here</p>
-            </div>
+        </div>
+        <div class="sub_debug" id="sub_debug">
+            <p>sub debug msg here</p>
         </div>
     </main>
 </body>
