--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <div class="debug_title">
                 <p><b>Subsciption<span id="activeTopic"></span></b></p>
                     <button class="btn-primary unsub_btn" id='un_sub_btn'>Unsubscribe</button>
+                    <img src="images/download.svg" class="dwnld_btn" id="dwnld_btn" title="click to download data in CSv format">
             </div>
             <div id="sub_debug_window">
             </div>
